# fontmin-rs

./: .gitignore  .oxlintrc.jsonc  404.html  AGENTS.md  CHANGELOG.md  CNAME  Cargo.toml  README.md  architecture.html  bump.config.ts  deny.toml  fontmin-rs-design.html  hashmap.json  index.html  package.json  playground.html  pnpm-lock.yaml  pnpm-workspace.yaml  releasing.html  roadmap.html  taplo.toml
.worktrees/browser-wasm-runtime/crates/fontmin_plugin/: Cargo.toml
.worktrees/browser-wasm-runtime/crates/fontmin_woff2/: Cargo.toml
.worktrees/browser-wasm-runtime/crates/fontmin_woff2/src/: lib.rs
.worktrees/browser-wasm-runtime/wasm/fontmin-core/: Cargo.toml
.worktrees/browser-wasm-runtime/wasm/fontmin-core/src/: lib.rs
.worktrees/fontmin-rs-plugin-context/apps/fontmin/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/apps/fontmin/src/: cli.rs
.worktrees/fontmin-rs-plugin-context/apps/fontmin/src/commands/: build.rs  convert.rs  mod.rs
.worktrees/fontmin-rs-plugin-context/apps/fontmin/tests/: cli.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin/src/: lib.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin/tests/: pipeline.rs  plugins.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin_diagnostics/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin_eot/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin_eot/src/: lib.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin_otf/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin_otf/src/: lib.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin_subset/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin_subset/src/: lib.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin_svg/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin_svg/src/: lib.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin_ttf/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin_ttf/src/: lib.rs
.worktrees/fontmin-rs-plugin-context/crates/fontmin_woff2/: Cargo.toml
.worktrees/fontmin-rs-plugin-context/crates/fontmin_woff2/src/: lib.rs
.worktrees/fontmin-rs-v0-1-scaffold/: Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.worktrees/fontmin-rs-v0-1-scaffold/.github/workflows/: ci.yml
.worktrees/fontmin-rs-v0-1-scaffold/apps/fontmin/: Cargo.toml
.worktrees/fontmin-rs-v0-1-scaffold/apps/fontmin/src/: cli.rs  main.rs
.worktrees/fontmin-rs-v0-1-scaffold/apps/fontmin/src/commands/: inspect.rs  mod.rs  subset.rs
.worktrees/fontmin-rs-v0-1-scaffold/apps/fontmin/tests/: cli.rs
.worktrees/fontmin-rs-v0-1-scaffold/crates/fontmin/: Cargo.toml
.worktrees/fontmin-rs-v0-1-scaffold/crates/fontmin/src/: lib.rs
.worktrees/fontmin-rs-v0-1-scaffold/crates/fontmin_config/: Cargo.toml
.worktrees/fontmin-rs-v0-1-scaffold/crates/fontmin_config/src/: config.rs  lib.rs
.worktrees/fontmin-rs-v0-1-scaffold/crates/fontmin_core/src/: format.rs  lib.rs
.worktrees/fontmin-rs-v0-1-scaffold/crates/fontmin_diagnostics/src/: lib.rs
.worktrees/fontmin-rs-v0-1-scaffold/napi/fontmin/: Cargo.toml  package.json
.worktrees/fontmin-rs-v0-1-scaffold/napi/fontmin/src/: lib.rs
.worktrees/fontmin-rs-v0-1-scaffold/napi/fontmin/src-js/: bindings.js  index.d.ts  index.js
.worktrees/fontmin-rs-v0-1-scaffold/napi/fontmin/test/: api.test.ts
api/: node.html  wasm.html
apps/fontmin/: Cargo.toml
apps/fontmin/src/: cli.rs  config.rs  main.rs
apps/fontmin/src/commands/: bench.rs  build.rs  convert.rs  coverage.rs  doctor.rs  format.rs  mod.rs  subset.rs
apps/fontmin/tests/: cli.rs
assets/: api_node.md.B0nVVD_G.js  api_node.md.B0nVVD_G.lean.js  api_node.md.B5e-c6BH.js  api_node.md.B5e-c6BH.lean.js  api_node.md.BeDSEBHr.js  api_node.md.BeDSEBHr.lean.js  api_node.md.BpI-_We8.js  api_node.md.BpI-_We8.lean.js  api_node.md.ByWAl9sL.js  api_node.md.ByWAl9sL.lean.js  api_node.md.C4CiqmDn.js  api_node.md.C4CiqmDn.lean.js  api_node.md.CZAQsVze.js  api_node.md.CZAQsVze.lean.js  api_node.md.Cfihljmp.js  api_node.md.Cfihljmp.lean.js  api_node.md.CncK1M2h.js  api_node.md.CncK1M2h.lean.js  api_node.md.Cr6hq0Kv.js  api_node.md.Cr6hq0Kv.lean.js  api_node.md.CsfPLrgX.js  api_node.md.CsfPLrgX.lean.js  api_node.md.D5y_Hrr0.js  api_node.md.D5y_Hrr0.lean.js  api_node.md.D7-Ce8th.js  api_node.md.D7-Ce8th.lean.js  api_node.md.D8kh0oYj.js  api_node.md.D8kh0oYj.lean.js  api_node.md.DFtZ00Mf.js  api_node.md.DFtZ00Mf.lean.js  api_node.md.DIgQWLm4.js  api_node.md.DIgQWLm4.lean.js  api_node.md.DKg_6a-e.js  api_node.md.DKg_6a-e.lean.js  api_node.md.DM3Bg2en.js  api_node.md.DM3Bg2en.lean.js  api_node.md.DMI8oG79.js  api_node.md.DMI8oG79.lean.js  api_node.md.DR0Kzv1w.js  api_node.md.DR0Kzv1w.lean.js  (+1324 more)
benchmarks/: README.md  baseline.json
crates/fontmin_config/: Cargo.toml
crates/fontmin_config/src/: config.rs  lib.rs
crates/fontmin_core/: Cargo.toml
crates/fontmin_core/src/: asset.rs  coverage.rs  delivery.rs  lib.rs  text.rs  unicode_range.rs
crates/fontmin_css/: Cargo.toml
crates/fontmin_css/src/: lib.rs
crates/fontmin_fs/: Cargo.toml
crates/fontmin_otf/: Cargo.toml
crates/fontmin_otf/src/: glyf.rs  lib.rs  outline.rs  sfnt.rs
crates/fontmin_pipeline/: Cargo.toml
crates/fontmin_pipeline/src/: lib.rs
crates/fontmin_plugins/: Cargo.toml
crates/fontmin_plugins/src/: lib.rs
crates/fontmin_subset/: Cargo.toml
crates/fontmin_subset/src/: lib.rs
crates/fontmin_ttf/: Cargo.toml
crates/fontmin_woff/: Cargo.toml
crates/fontmin_woff/src/: lib.rs
docs/: architecture.md  fontmin-rs-design.md  index.md  package.json  playground.md  releasing.md  roadmap.md  uno.config.ts  vitest.config.ts
guide/: cli.html  config.html  features.html  getting-started.html  migration.html
scripts/: benchmark-baseline.mjs  benchmark-baseline.test.mjs  check-font-fixtures.mjs  check-font-fixtures.test.mjs  copy-native-artifacts.mjs  copy-native-artifacts.test.mjs  ensure-wasm.mjs  ensure-wasm.test.mjs  npm-dist-tag.mjs  npm-dist-tag.test.mjs  package-dry-run.mjs  (+6 more)
(+289 files in other folders)
