[workspace]
resolver = "3"
members = ["apps/*", "crates/*", "napi/*", "wasm/fontmin-core"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/fontmin-rs/fontmin-rs"
license = "MIT"
repository = "https://github.com/fontmin-rs/fontmin-rs"
description = "Fast font subsetter and converter written in Rust with Node.js bindings."

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"
non_ascii_idents = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"

[workspace.dependencies]
fontmin = { path = "crates/fontmin" }
fontmin_css = { path = "crates/fontmin_css" }
fontmin_config = { path = "crates/fontmin_config" }
fontmin_core = { path = "crates/fontmin_core" }
fontmin_detect = { path = "crates/fontmin_detect" }
fontmin_diagnostics = { path = "crates/fontmin_diagnostics" }
fontmin_eot = { path = "crates/fontmin_eot" }
fontmin_fs = { path = "crates/fontmin_fs" }
fontmin_otf = { path = "crates/fontmin_otf" }
fontmin_pipeline = { path = "crates/fontmin_pipeline" }
fontmin_plugin = { path = "crates/fontmin_plugin" }
fontmin_plugins = { path = "crates/fontmin_plugins" }
fontmin_subset = { path = "crates/fontmin_subset" }
fontmin_svg = { path = "crates/fontmin_svg" }
fontmin_testing = { path = "crates/fontmin_testing" }
fontmin_ttf = { path = "crates/fontmin_ttf" }
fontmin_woff = { path = "crates/fontmin_woff" }
fontmin_woff2 = { path = "crates/fontmin_woff2" }

async-trait = "0.1"
allsorts = { version = "0.17.0", default-features = false, features = [
  "flate2_rust",
  "outline",
] }
base64 = "0.22"
brotli = { version = "8", features = ["disable-timer"] }
bpaf = { version = "0.9.26", features = ["derive", "bright-color"] }
flate2 = "1"
font-subset = "0.1.0"
glob = "0.3"
indexmap = { version = "2", features = ["serde"] }
jsonc-parser = { version = "0.33.0", features = ["serde"] }
miette = { version = "7", features = ["fancy"] }
napi = { version = "3.10.3", features = ["napi8", "serde-json", "tokio_rt"] }
napi-build = "2.3.2"
napi-derive = "3.5.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
ttf2woff2 = { version = "0.13.1", default-features = false }
ttf-parser = "0.25"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "process",
  "io-util",
  "sync",
] }
woff2-patched = "0.4.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
