[workspace]
resolver = "3"
members = ["apps/*", "crates/*", "napi/*"]
exclude = ["wasm/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://github.com/ntnyq/fontmin-rs"
license = "MIT"
repository = "https://github.com/ntnyq/fontmin-rs"
description = "Fast font subsetter and converter written in Rust with Node.js bindings."

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_unsafe = "warn"
non_ascii_idents = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"

[workspace.dependencies]
fontmin = { path = "crates/fontmin" }
fontmin_config = { path = "crates/fontmin_config" }
fontmin_core = { path = "crates/fontmin_core" }
fontmin_detect = { path = "crates/fontmin_detect" }
fontmin_diagnostics = { path = "crates/fontmin_diagnostics" }
fontmin_subset = { path = "crates/fontmin_subset" }

bpaf = { version = "0.9.26", features = ["derive", "bright-color"] }
font-subset = "0.1.0"
indexmap = { version = "2", features = ["serde"] }
miette = { version = "7", features = ["fancy"] }
napi = { version = "3.10.3", features = ["napi8", "serde-json", "tokio_rt"] }
napi-build = "2.3.2"
napi-derive = "3.5.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
