[package]
name = "fontmin_css"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
base64 = { workspace = true }
fontmin_core = { workspace = true }
fontmin_diagnostics = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
