[package]
name = "fontmin_fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
fontmin_diagnostics = { workspace = true }
glob = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
