[package]
name = "fontmin_plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
fontmin_core = { workspace = true }
fontmin_css = { workspace = true }
fontmin_diagnostics = { workspace = true }
fontmin_eot = { workspace = true }
fontmin_otf = { workspace = true }
fontmin_plugin = { workspace = true }
fontmin_subset = { workspace = true }
fontmin_svg = { workspace = true }
fontmin_woff = { workspace = true }
fontmin_woff2 = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
