[package]
name = "fontmin_subset"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
font-subset = { workspace = true }
fontmin_core = { workspace = true }
fontmin_diagnostics = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
fontmin_testing = { workspace = true }

[lints]
workspace = true
