[package]
name = "fontmin_plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
async-trait = { workspace = true }
fontmin_core = { workspace = true }
fontmin_diagnostics = { workspace = true }

[lints]
workspace = true
