[package]
name = "fontmin_woff2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
brotli = { workspace = true }
fontmin_core = { workspace = true }
fontmin_diagnostics = { workspace = true }
fontmin_ttf = { workspace = true }
serde = { workspace = true }
ttf2woff2 = { workspace = true }
woff2-patched = { workspace = true }

[dev-dependencies]
fontmin_testing = { workspace = true }

[lints]
workspace = true
