[package]
name = "fontmin_diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
