[package]
name = "fontmin_eot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
fontmin_diagnostics = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
