[package]
name = "fontmin_otf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
fontmin_core = { workspace = true }
fontmin_diagnostics = { workspace = true }
fontmin_ttf = { workspace = true }

[lints]
workspace = true
