[package]
name = "fontmin_svg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
fontmin_diagnostics = { workspace = true }
fontmin_ttf = { workspace = true }
serde = { workspace = true }
ttf-parser = { workspace = true }

[lints]
workspace = true
