[package]
name = "fontmin_woff2"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
fontmin_diagnostics = { workspace = true }
serde = { workspace = true }
ttf2woff2 = { workspace = true }

[lints]
workspace = true
