[package]
name = "fontmin_app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description.workspace = true

[[bin]]
name = "fontmin-rs"
path = "src/main.rs"

[dependencies]
bpaf = { workspace = true }
fontmin = { workspace = true }
fontmin_detect = { workspace = true }
miette = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
