[package]
name = "fontmin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
fontmin_config = { workspace = true }
fontmin_core = { workspace = true }
fontmin_diagnostics = { workspace = true }
fontmin_subset = { workspace = true }

[lints]
workspace = true
